# harnessctl-v2

./: .env.example  .gitignore  .jscpd.json  .prettierignore  .shellcheckrc  FLOWS.md  README.md  compare-tests.sh  eslint.config.mjs  mise.toml  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.external-docs/sessions/: session-ses_0988.md
.husky/: pre-commit  pre-push
.issues/: 00001-initiative-human-governed-extensible-sdlc-for-coding-harnesses.md  00002-story-design-the-opencode-orchestrator-foundation.md  00003-task-implement-generic-configuration-package.md  00004-task-implement-opencode-configuration-adapter.md  00005-task-implement-pi-configuration-adapter.md
.opencode/commands/: work-explore.md  work-new.md  work-plan.md  work.md
.pi/commands/: work-new.md
.specs/: 00001-prd-human-governed-sdlc-v1.md  00001-requirement-summary.md  00002-lld-filesystem-issue-management-v2.md  00003-lld-harness-neutral-sdlc-prompt-templates-and-harness-installers-v2.md  lld--generic-configuration-tools-and-harness-adapters-v1.md
extensions/generic-tools/: config.spec.ts  config.test.ts  config.ts  index.ts  issues.spec.ts  issues.test.ts  issues.ts  package.json
extensions/opencode-tools/: index.spec.ts  index.test.ts  index.ts  integration.test.ts  package.json
extensions/pi-tools/: index.spec.ts  index.test.ts  index.ts  integration.test.ts  package.json
src/harnessctl/: __init__.py  install.py  templates.py
src/harnessctl/templates/sdlc/: work-cvs.md.j2  work-design-doc.md.j2  work-explore.md.j2  (+14 more)
tests/: test_install.py
